# kaspersky_task_cpp

./: CMakeLists.txt  README.md
include/: checker.h  timework.h
src/: checker.cpp  main.cpp  timework.cpp
